fixed data model bugs in documentation
